--- a/app/Resources/views/form_themes/core_layouts/bootstrap_3_horizontal_layout.html.twig
+++ b/app/Resources/views/form_themes/core_layouts/bootstrap_3_horizontal_layout.html.twig
@@ -1,4 +1,4 @@
-{% use "bootstrap_3_layout.html.twig" %}
+{% use ":form_themes/core_layouts:bootstrap_3_layout.html.twig" %}
 
 {% block form_start -%}
     {% set attr = attr|merge({class: (attr.class|default('') ~ ' form-horizontal')|trim}) %}
