--- a/app/Resources/views/form_themes/core_layouts/bootstrap_base_layout.html.twig
+++ b/app/Resources/views/form_themes/core_layouts/bootstrap_base_layout.html.twig
@@ -137,6 +137,7 @@
     {%- endif -%}
 {%- endblock dateinterval_widget -%}
 
+
 {% block choice_widget_collapsed -%}
     {%- set attr = attr|merge({class: (attr.class|default('') ~ ' form-control')|trim}) -%}
     {{- parent() -}}
@@ -165,12 +166,15 @@
 {# Labels #}
 
 {% block choice_label -%}
+
     {# remove the checkbox-inline and radio-inline class, it's only useful for embed labels #}
     {%- set label_attr = label_attr|merge({class: label_attr.class|default('')|replace({'checkbox-inline': '', 'radio-inline': '', 'checkbox-custom': '', 'radio-custom': ''})|trim}) -%}
     {{- block('form_label') -}}
 {% endblock choice_label %}
 
 {% block checkbox_label -%}
+{#    {{- block('form_label') -}}#}
+{#    {{ dump(block('checkbox_radio_label')) }}#}
     {{- block('checkbox_radio_label') -}}
 {%- endblock checkbox_label %}
 
