--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,8 @@
     </head>
     <body>
 
-        {% block body %}{% endblock %}
+        {% block body %}
+        {% endblock %}
         {% javascripts output="js/compiled1.js"
 
             filter='?uglifyjs2' %}
@@ -34,6 +35,7 @@
        ============================== FLASH MESSAGE HAKKINDA ====================================
    #}
 
+        <h1>s</h1>
         <script>
             {% for label, messages in app.flashes %}
             {% for message in messages %}
